# hydrogym

./: poetry.toml  pyproject.toml
packaging/singularity/: backup_nogit.def  firedrake_home.def  firedrake_project.def  hydrogym_home.def  hydrogym_project.def  ideas_for_ci.md
singularity/: hydrogym.def  hydrogym.def copy
